[package]
name = "websocket-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-util = "0.3.28"
futures-channel = "0.3.28"
log = "0.4.19"
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = "*"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
